use stable scrollbar gutter to avoid content shifting

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -189,6 +189,10 @@ body,
 	display: none;
 }
 
+html {
+	scrollbar-gutter: stable;
+}
+
 /* firefox scrollbar */
 html,
 * {
